Fix hover color for nav links in dark mode

--- a/public/styles/about.css
+++ b/public/styles/about.css
@@ -59,6 +59,10 @@ body.dark-mode .navbar-links a {
     color: #ffffff;
 }
 
+body.dark-mode .navbar-links a:hover {
+    color: rgba(253, 165, 0, 0.959);
+}
+
 .spacer {
     flex-grow: 1;
 }
