--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,7 +3,6 @@ body, html {
     margin: 0;
     padding: 0;
     text-align: center;
-
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed; 
@@ -56,6 +55,10 @@ body.dark-mode .navbar {
 
 body.dark-mode .navbar-links a {
     color: #ffffff;
+}
+
+body.dark-mode .navbar-links a:hover {
+    color: rgba(253, 165, 0, 0.959);
 }
 
 .spacer {
