--- a/public/styles/tracked.css
+++ b/public/styles/tracked.css
@@ -60,6 +60,10 @@ body.dark-mode .navbar-links a {
     color: #ffffff;
 }
 
+body.dark-mode .navbar-links a:hover {
+    color: rgba(253, 165, 0, 0.959);
+}
+
 .spacer {
     flex-grow: 1;
 }
